# TGV-TimelineAnomalyHighlighter

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: demo_report.html  sample_generic.csv  sample_plaso.csv
tests/: conftest.py  test_cli.py  test_detector.py  test_features.py  test_ingest.py  test_report.py
timeline_anomaly/: __init__.py  cli.py  detector.py  explain.py  features.py  ingest.py  report.py
