[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "timeline-anomaly"
version = "0.1.0"
description = "ML-powered anomaly highlighter for DFIR timelines"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["dfir", "forensics", "anomaly-detection", "security", "scikit-learn"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pandas>=1.5",
    "scikit-learn>=1.2",
    "numpy>=1.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
